Fixed the spacing issues between lists via editing the css and favorite stars not showing

--- a/Unit-16/css/stories.css
+++ b/Unit-16/css/stories.css
@@ -1,7 +1,16 @@
 /* Lists of stories */
 
+.stories-container {
+  padding: 0 10px;
+}
+
 .stories-list {
-  margin: 20px 5px;
+  margin: 0;
+}
+
+.stories-list.hidden {
+  margin: 0;
+  display: none;
 }
 
 .stories-list > li {
@@ -10,11 +19,20 @@
   margin: 10px 0;
 }
 
+.stories-list li:first-child {
+  margin-top: 20px;
+} 
+
+.stories-list li:last-child {
+  margin-bottom: 20px;
+} 
+
 #stories-loading-msg {
   font-weight: bold;
   font-size: 150%;
   margin: 20px 30px;
 }
+
 
 
 /* Individual stories */
